# roam

./: .gitignore  README.md  debug_hourly.py  debug_weather.py  pyproject.toml
.github/workflows/: ci.yml
src/roam/: __init__.py  cli.py  config.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_daily_weather_fix.py  test_garage.py  test_places.py  test_search.py  test_weather_logic.py  test_weather_qpf.py
